--- a/dam/index.html
+++ b/dam/index.html
@@ -63,7 +63,11 @@ div.item {
     <div class="items">
     <a href="/dam/m3">
             <div class="item">
-                <span>M3 - Programació bàsica</span>
+                <span>M3 - Programació</span>
+            </div>
+        </a><a href="/dam/entorns">
+            <div class="item">
+                <span>Entorns de desenrotllament</span>
             </div>
         </a><a href="/dam/m6">
             <div class="item">
