--- a/dam/m3/index.html
+++ b/dam/m3/index.html
@@ -62,7 +62,7 @@ div.item {
         </ul>
     
 
-    <h1>M3 - Programació bàsica</h1>
+    <h1>M3 - Programació</h1>
     <div class="items">
     <a href="/dam/m3/javatutorial">
             <div class="item">
