--- a/dam/m8/index.html
+++ b/dam/m8/index.html
@@ -66,7 +66,7 @@ div.item {
     <div class="items">
     <a href="/dam/m8/uf1">
             <div class="item">
-                <span>UF1. Desenvolupament d’aplicacions per dispositius mòbils</span>
+                <span>UF1. Desenvolupament d&#39;aplicacions per dispositius mòbils</span>
             </div>
         </a><a href="/dam/m8/uf2">
             <div class="item">
