--- a/dam/m8/uf1/index.html
+++ b/dam/m8/uf1/index.html
@@ -65,7 +65,7 @@ div.item {
         </ul>
     
 
-    <h1>UF1. Desenvolupament d’aplicacions per dispositius mòbils</h1>
+    <h1>UF1. Desenvolupament d&#39;aplicacions per dispositius mòbils</h1>
     <div class="items">
     <a href="/dam/m8/uf1/apps">
             <div class="item">
