--- a/daw/entorns/index.html
+++ b/daw/entorns/index.html
@@ -58,18 +58,15 @@ div.item {
         <li>
             <a href="/daw"> daw </a>
         </li>
-        <li>
-            <a href="/daw/m8"> m8 </a>
-        </li>
         
         </ul>
     
 
-    <h1>UF2 - Servidors d&#39;aplicacions web</h1>
+    <h1>Entorns de desenrotllament</h1>
     <div class="items">
-    <a href="/daw/m8/uf2/daw-m8-dockerwp">
+    <a href="/daw/entorns/docker">
             <div class="item">
-                <span>Docker Wordpress</span>
+                <span>Docker</span>
             </div>
         </a>
     </div>
