--- a/daw/index.html
+++ b/daw/index.html
@@ -65,6 +65,14 @@ div.item {
             <div class="item">
                 <span>M8 - Desplegament d&#39;aplicacions</span>
             </div>
+        </a><a href="/daw/m3">
+            <div class="item">
+                <span>M3 - Programacio</span>
+            </div>
+        </a><a href="/daw/entorns">
+            <div class="item">
+                <span>Entorns de desenrotllament</span>
+            </div>
         </a>
     </div>
 </div>
