--- a/daw/m8/index.html
+++ b/daw/m8/index.html
@@ -70,11 +70,11 @@ div.item {
             </div>
         </a><a href="/daw/m8/uf2">
             <div class="item">
-                <span>UF2 - Servidors d’aplicacions web</span>
+                <span>UF2 - Servidors d&#39;aplicacions web</span>
             </div>
         </a><a href="/daw/m8/uf3">
             <div class="item">
-                <span>UF3 - Desplegament d’aplicacions web</span>
+                <span>UF3 - Desplegament d&#39;aplicacions web</span>
             </div>
         </a><a href="/daw/m8/uf4">
             <div class="item">
