--- a/dam/entorns/index.html
+++ b/dam/entorns/index.html
@@ -56,20 +56,17 @@ div.item {
             <a href="/"> ⌂ </a>
         </li>
         <li>
-            <a href="/daw"> daw </a>
-        </li>
-        <li>
-            <a href="/daw/m8"> m8 </a>
+            <a href="/dam"> dam </a>
         </li>
         
         </ul>
     
 
-    <h1>UF2 - Servidors d&#39;aplicacions web</h1>
+    <h1>Entorns de desenrotllament</h1>
     <div class="items">
-    <a href="/daw/m8/uf2/daw-m8-dockerwp">
+    <a href="/dam/entorns/docker">
             <div class="item">
-                <span>Docker Wordpress</span>
+                <span>Docker</span>
             </div>
         </a>
     </div>
