--- a/smx/m8/index.html
+++ b/smx/m8/index.html
@@ -70,7 +70,7 @@ div.item {
             </div>
         </a><a href="/smx/m8/uf2">
             <div class="item">
-                <span>UF2 - Gestors d’arxius web</span>
+                <span>UF2 - Gestors d&#39;arxius web</span>
             </div>
         </a><a href="/smx/m8/uf3">
             <div class="item">
@@ -78,7 +78,7 @@ div.item {
             </div>
         </a><a href="/smx/m8/uf4">
             <div class="item">
-                <span>UF4 - Portals web d’aprenentatge </span>
+                <span>UF4 - Portals web d&#39;aprenentatge </span>
             </div>
         </a><a href="/smx/m8/uf5">
             <div class="item">
