--- a/smx/m8/uf2/index.html
+++ b/smx/m8/uf2/index.html
@@ -65,7 +65,7 @@ div.item {
         </ul>
     
 
-    <h1>UF2 - Gestors d’arxius web</h1>
+    <h1>UF2 - Gestors d&#39;arxius web</h1>
     <div class="items">
     <a href="/smx/m8/uf2/nextcloud">
             <div class="item">
