--- a/_materials/docker/exercices/index.html
+++ b/_materials/docker/exercices/index.html
@@ -173,7 +173,7 @@
     <work>
         <h2>3. Nano tasks</h2>
 
-        <p>El següent programa consisteix en un senzill gestor de taskes. L'aplicació permet afegir tasques i veure-les.</p>
+        <p>El següent programa consisteix en un senzill gestor de taskes. L'aplicació permet afegir tasques i veure-les:</p>
         <shell>
             == WELCOME TO NANO TASKS ==
             1. Add task
@@ -192,6 +192,12 @@
             Task List
             ---------
             Comprar el pa
+
+            == WELCOME TO NANO TASKS ==
+            1. Add task
+            2. View tasks
+
+            Select option:
         </shell>
         <p>Desenvoluparem l'aplicació amb una arquitectura client-servidor.</p>
         <p>Per un costat hi ha un programa que fa de servidor, i per l'altre un programa client que connecta al servidor:</p>
